--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "webpack-from-scratch",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Yihua Zhang <yihuazhang2@gmail.com> (http://yihuazhang.com/)",
-  "license": "MIT",
-  "dependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
-  }
+	"name": "webpack-from-scratch",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack --mode production"
+	},
+	"keywords": [],
+	"author": "Yihua Zhang <yihuazhang2@gmail.com> (http://yihuazhang.com/)",
+	"license": "MIT",
+	"dependencies": {
+		"@babel/core": "^7.8.6",
+		"@babel/preset-env": "^7.8.6",
+		"@babel/preset-react": "^7.8.3",
+		"babel-loader": "^8.0.6",
+		"css-loader": "^3.4.2",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"react": "16.8.6",
+		"react-dom": "16.8.6",
+		"style-loader": "^1.1.3",
+		"webpack": "^4.42.0",
+		"webpack-cli": "^3.3.11"
+	}
 }
